feat(phase1): complete code quality and modernization phase
Phase 1 Modernization Complete:

1.1 - Logging Cleanup
  - Replaced console.log statements with logger.info() calls in socketManager.js
  - Production code now uses structured JSON logging via existing logger module

1.2 - TypeScript and Build Setup
  - Created tsconfig.json with strict type checking enabled
  - Added build scripts: 'npm run build' (tsc), 'dev:ts' (watch mode)
  - Updated package.json with TypeScript dev dependencies (@types/express, tsx)
  - Added lint commands for JS and TS files

1.3 - Initial TypeScript Migration (Utilities)
  - Migrated logger.js → src/logger.ts with full type annotations
  - Migrated db.js → src/db.ts with improved connection pooling
  - Both files export CommonJS-compatible modules with ESM syntax ready

1.4 - Type Definitions
  - Created src/types/index.ts with comprehensive interfaces:
    * Account, Message, Webhook entities
    * SendMessageRequest/Response, SendMediaRequest/Response
    * ContactInfo, ChatInfo, WebhookPayload
    * Logger, ValidationResult, ApiResponse wrappers
    * MediaFile, AuthState, RateLimitConfig types
  - All types document API contracts and future feature requirements

Testing:
  - npm run build completes without errors
  - Generated dist/ with .js, .d.ts, and source maps
  - All 537 dependencies resolved correctly

Next Steps:
  - Migrate remaining core files to TypeScript (accountManager, socketManager, routes)
  - Implement Phase 2: Security (authentication, rate limiting, SSRF prevention)
  - Add Phase 4: Testing (Jest integration tests)

--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "description": "WhatsApp Integration Layer for Data Connectivity and Transfer",
   "main": "index.js",
   "scripts": {
-    "countLines": "cat ./*.js | wc -l",
+    "build": "tsc",
     "dev": "nodemon index.js",
+    "dev:ts": "tsx watch src/index.ts",
     "start": "node index.js",
+    "start:ts": "node --loader tsx dist/index.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "ping": "node scripts/cli.js ping"
+    "ping": "node scripts/cli.js ping",
+    "lint": "eslint . --ext .js,.ts",
+    "lint:fix": "eslint . --ext .js,.ts --fix"
   },
   "repository": {
     "type": "git",
@@ -36,10 +40,13 @@
     "typescript": "^5.9.3"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.11",
     "@types/node": "^20",
     "jest": "^29.7.0",
     "knip": "^5.69.0",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "tsx": "^4.7.0"
   },
   "overrides": {
     "glob": "^10.4.5"
