--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "axios": "^1.13.1",
     "dotenv": "^16.6.1",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
     "helmet": "^7.1.0",
     "link-preview-js": "^3.1.0",
     "mongodb": "^6.20.0",
     "multer": "^2.0.2",
     "qrcode-terminal": "^0.12.0",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
