test(phase2): add comprehensive middleware tests and security documentation
- Add 20 test cases for authentication, rate limiting, and validation
- Document Basic and API Key authentication in API Reference
- Document rate limiting and SSRF prevention features
- Update .env.example with all Phase 2 security variables
- All 20 tests passing successfully

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,34 @@ LOG_LEVEL=info
 # Startup behavior
 # When true, attempts to auto-connect all restored accounts
 AUTO_CONNECT_ON_START=false
+
+# ============================================================
+# Security Configuration - Phase 2
+# ============================================================
+
+# Basic Authentication
+# Enable username/password authentication
+BASIC_AUTH_ENABLED=false
+BASIC_AUTH_USERNAME=admin
+BASIC_AUTH_PASSWORD=changeme
+
+# API Key Authentication
+# Enable API key authentication via X-API-Key header
+# Format: JSON object with keys as API keys and values as permission strings
+# Example: {"key1":"read,write","key2":"read"}
+API_KEYS_ENABLED=false
+API_KEYS='{"your-api-key":"read,write"}'
+
+# Rate Limiting
+# Enable global rate limiting
+RATE_LIMIT_ENABLED=false
+# Time window in milliseconds (default: 15 minutes)
+RATE_LIMIT_WINDOW_MS=900000
+# Maximum requests per window (default: 100)
+RATE_LIMIT_MAX_REQUESTS=100
+
+# Webhook URL Validation (SSRF Prevention)
+# Enable validation of webhook URLs to prevent SSRF attacks
+WEBHOOK_URL_VALIDATION_ENABLED=false
+# Require HTTPS for webhooks in production
+ENFORCE_HTTPS_WEBHOOKS=false
